# esp_power_mater

./: CMakeLists.txt  README.md  pack.sh  sdkconfig  sdkconfig.80V  sdkconfig.esc  sdkconfig.esp32c2  sdkconfig.lcd
main/: CMakeLists.txt  Kconfig.projbuild  buzzer.c  buzzer.h  ch1115.c  esc.c  esc.h  font.c  font.h  idf_component.yml  ina226.c  ina226.h  ina238.c  ina238.h  key.c  key.h  lcd.c  lcd.h  lcd_view.c  lcd_view.h  llist.h  lv_font_cn_16.c  lv_font_cn_24.c  lv_font_cn_32.c  lv_img_32.c  main.c  main.h  oled.c  oled.h  oled_view.c  oled_view.h  oledfont.h  ssd1312.c  timer.c  timer.h
